fix: [FFM-8900]: Scroll flag sidebar overflow (#17270)

--- a/src/modules/75-cf/pages/feature-flags-detail/FeatureFlagsDetailPage.module.scss
+++ b/src/modules/75-cf/pages/feature-flags-detail/FeatureFlagsDetailPage.module.scss
@@ -11,8 +11,6 @@
   height: 100%;
   width: 460px;
 
-  background: var(--grey-0) !important;
-  box-shadow: var(--elevation-2);
   display: flex;
   gap: var(--spacing-large);
 }
@@ -28,6 +26,8 @@
   grid-template-columns: 460px 1fr;
   overflow-y: hidden;
   section:nth-of-type(1) {
+    overflow: auto;
+    box-shadow: var(--elevation-2);
     background-color: var(--grey-0);
     z-index: 1;
   }
